Fixed menu overflow bug

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,10 @@ input[type="button"] {
 body {
     touch-action: manipulation;
     background-color: #C4C6B1;
-    /* overflow: hidden;     */
+}
+
+main {
+    overflow: hidden;
 }
 
 #wrap {
